--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="google-site-verification" content="5-prxXSY2_PrzvnJX_X3TrctpZXhg6WCcR0Ka3V6dAs" />
     <meta charset="utf-8">
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
